[gd_scene load_steps=2 format=3 uid="uid://574vwyeb6b7n"]

[ext_resource type="Script" path="res://scenes/ui/ui.gd" id="1_fcr42"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_fcr42")

[node name="Scoreboard" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="P1ScoreLabel" type="Label" parent="Scoreboard"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -11.5
offset_right = 37.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
vertical_alignment = 1

[node name="P2ScoreLabel" type="Label" parent="Scoreboard"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -11.5
offset_right = 37.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="Scoreboard"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 151.0
offset_right = 41.0
offset_bottom = 174.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "countdown"
horizontal_alignment = 1
vertical_alignment = 1
